syntax = "proto3";

package raftRpcProtoc;

option cc_generic_services = true;

// 日志实体
message LogEntry
{
    bytes Command = 1;
    int32 LogTerm = 2;
    int32 LogIndex = 3;
}

// 由 leader 复制日志条目的包, 也可以是心跳包
message AppendEntriesArgs
{
    int32 Term = 1; // leader 任期号
    int32 LeaderId = 2; // leader ID 为了其他节点能重定向写操作到 leader
    int32 PrevLogIndex = 3; // leader 最新日志前一个日志位置的索引值
    int32 PrevLogTerm = 4; // leader 最新日志前一个日志的任期号
    repeated LogEntry Entries = 5; // 需要追加到 follower 上的日志条目, 可能是多个
    int32 LeaderCommit = 6; // leader 服务器的 commitindex
}

message AppendEntriesReply
{
    int32 Term = 1;
    bool Success = 2;
    int32 UpdateNextIndex = 3;
    int32 AppState = 4;
}

message RequestVoteArgs
{
    int32 Term = 1;
    int32 CandidateId = 2;
    int32 LastLogIndex = 3;
    int32 LastLogTerm = 4;
}

message RequestVoteReply
{
    int32 Term = 1;
    bool VoteGranted = 2;
    int32 VoteState = 3;
}

message InstallSnapshotRequest
{
    int32 LeaderId = 1;
    int32 Term = 2;
    int32 LastSnapshotIncludeIndex = 3;
    int32 LastSnapshotIncludeTerm = 4;
    bytes Data = 5;
}

message InstallSnapshotResponse
{
    int32 Term = 1;
}

service raftRpc
{
    rpc AppendEntries(AppendEntriesArgs) returns(AppendEntriesReply);
    rpc InstallSnapshot(InstallSnapshotRequest) returns(InstallSnapshotResponse);
    rpc RequestVote(RequestVoteArgs) returns(RequestVoteReply);
}