#pragma once

#include <cmath>
#include <mutex>
#include <string>
#include <thread>
#include <vector>
#include <memory>
#include <chrono>
#include <iostream>
#include <boost/serialization/string.hpp>
#include <boost/serialization/vector.hpp>
#include "../../common/include/util.h"
#include "../../common/include/config.h"
#include "ApplyMsg.h"
#include "Persister.h"
#include "raftRpcUtil.h"
#include "boost/any.hpp"
#include "boost/serialization/serialization.hpp"